// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTransformation Legend config should be always disabled for single series and push this info out 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "colors": Object {
          "colorAssignments": Array [
            Object {
              "color": Object {
                "type": "guid",
                "value": "1",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "$#,##0.00",
                  "identifier": "aangOxLSeztu",
                  "localIdentifier": "m_aangOxLSeztu",
                  "name": "Amount",
                  "uri": "/gdc/md/l32xdyl4bjuzgf9kkqr2avl55gtuyjwf/obj/1271",
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": Object {
          "legend_enabled": false,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ChartTransformation Legend config should be enabled & on the top by default and push this info out 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "colors": Object {
          "colorAssignments": Array [
            Object {
              "color": Object {
                "type": "guid",
                "value": "1",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "$#,##0.00",
                  "identifier": "aangOxLSeztu",
                  "localIdentifier": "m_aangOxLSeztu",
                  "name": "Amount",
                  "uri": "/gdc/md/l32xdyl4bjuzgf9kkqr2avl55gtuyjwf/obj/1271",
                },
              },
            },
            Object {
              "color": Object {
                "type": "guid",
                "value": "2",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "$#,##0.00",
                  "identifier": "acugFHNJgsBy",
                  "localIdentifier": "m_acugFHNJgsBy",
                  "name": "Won",
                  "uri": "/gdc/md/l32xdyl4bjuzgf9kkqr2avl55gtuyjwf/obj/1272",
                },
              },
            },
            Object {
              "color": Object {
                "type": "guid",
                "value": "3",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "#,##0.00",
                  "localIdentifier": "m_m_aangOxLSeztu_m_acugFHNJgsBy",
                  "name": "Calculated 'Lost' measure",
                },
              },
            },
            Object {
              "color": Object {
                "type": "guid",
                "value": "4",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "#,##0.00",
                  "localIdentifier": "m_m_m_aangOxLSeztu_m_acugFHNJgsBy_m_acugFHNJgsBy",
                  "name": "Ratio of Won and Lost",
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": Object {
          "legend_enabled": true,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
